kustomize/overlays/stage/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-ingress

spec:
  rules:
    - host: api-stage.hpc.local
